--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xyflow/react": "^12.0.3",
+    "clone-deep": "^4.0.1",
+    "dagre": "^0.8.5",
+    "next": "14.2.5",
     "react": "^18",
+    "react-bracket": "^0.0.4",
+    "react-brackets": "^0.4.7",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/clone-deep": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
