--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@xyflow/react": "^12.0.3",
     "clone-deep": "^4.0.1",
     "dagre": "^0.8.5",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
     "react-bracket": "^0.0.4",
